2004-03-23  Ravindra  <rkumar@novell.com>
	* LinearGradientBrush.cs: Implemented public methods.

2004-03-22  Ravindra  <rkumar@novell.com>
	* LinearGradientBrush.cs: Implemented constructors and properties.
	* PathGradientBrush.cs: Fixed a constructor and few coding
	style fixes. 

2004-03-18  Ravindra  <rkumar@novell.com>
	* HatchBrush.cs: Fixed Clone method.
	* PathGradientBrush.cs: Fixed Clone method and few minor
	fixes.

2004-03-17  Ravindra  <rkumar@novell.com>
	* Blend.cs: Fixed.
	* ColorBlend.cs: Fixed.

2004-03-06  Ravindra  <rkumar@novell.com>
	* PathGradientBrush.cs: Implemented methods.

2004-03-06  Ravindra  <rkumar@novell.com>
	* PathGradientBrush.cs: Implemented constructors and properties.

2004-03-04  Duncan Mak  <duncan@ximian.com>

	* GraphicsPath.cs (PathCount): Corrected. The name should be PointCount.
	(AddPath): Implemented.

2004-02-27  Ravindra <rkumar@novell.com>

	* WrapMode.cs: Corrected enum values. Tile should be zero
	and Clamp should be four.

2004-02-11  Ravindra <rkumar@novell.com>

	* Matrix.cs: Added status checks using 
	GDIPlus.CheckStatus(Status) method.

2004-02-07  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* GraphicsPathIterator.cs: Fixed signature, added TODOs
	* Matrix.cs: Removed additional method

2004-02-06  Ravindra <rkumar@novell.com>

	* HatchBrush.cs: Using CheckStatus method instead of
	GetException.

2004-02-05  Ravindra <rkumar@novell.com>

	* HatchBrush.cs: Implemented.
	* HatchStyle.cs: Corrected enum values. Changed file format
	from DOS to UNIX.

2004-01-30  Duncan Mak  <duncan@ximian.com>

	* GraphicsPath.cs (AddPie): Corrected arguments sent to
	P/Invoke. This fixes the strange NaNs we were getting when we
	tried to draw Paths with a Pie figure.

2004-01-24  Duncan Mak  <duncan@ximian.com>

	* GraphicsPath.cs (AddEllipse): Added.

2004-01-19  Duncan Mak  <duncan@ximian.com>

	* GraphicsPath.cs: Implemented. Still needs testing, though.