@@ -1,11 +1,13 @@
 //
 // System.Drawing.Drawing2D.WrapMode.cs
 //
-// Author:
+// Authors:
 //   Stefan Maierhofer <sm@cg.tuwien.ac.at>
 //   Dennis Hayes (dennish@Raytek.com)
+//   Ravindra (rkumar@novell.com)
 //
-// (C) 2002/3 Ximian, Inc
+// (C) 2002/3 Ximian, Inc. http://www.ximian.com
+// (C) 2004 Novell, Inc. http://www.novell.com
 //
 using System;
 
@@ -17,8 +19,8 @@ namespace System.Drawing.Drawing2D {
 	public enum WrapMode {
 		Tile,
 		TileFlipX,
-		TileFlipXY,
 		TileFlipY,
+		TileFlipXY,
 		Clamp
 	}
 }
