@@ -1,3 +1,6 @@
+2004-03-26  Ravindra  <rkumar@novell.com>
+	* WrapMode.cs: Corrected the TileFlipXY and TileFlipY values.
+
 2004-03-23  Ravindra  <rkumar@novell.com>
 	* LinearGradientBrush.cs: Implemented public methods.
 
